@@ -8,14 +8,10 @@ import com.asg.common.lib.dto.RawSearchResult;
 import com.asg.common.lib.dto.request.LogRequestDto;
 import com.asg.common.lib.exception.ResourceNotFoundException;
 import com.asg.common.lib.security.util.UserContext;
-import com.asg.common.lib.service.DocumentDeleteService;
-import com.asg.common.lib.service.DocumentSearchService;
-import com.asg.common.lib.service.PrintService;
-import com.asg.common.lib.service.LovDataService;
-import com.asg.common.lib.service.LoggingService;
+import com.asg.common.lib.service.*;
 import com.asg.common.lib.enums.LogDetailsEnum;
+import com.asg.common.lib.utility.DateUtil;
 import com.asg.common.lib.utility.PaginationUtil;
-import com.asg.finance.annotation.PerformGlPosting;
 import com.asg.finance.dto.BankDepositVoucherDtlDto;
 import com.asg.finance.dto.BankDepositVoucherRequestDto;
 import com.asg.finance.dto.BankDepositVoucherResponseDto;
@@ -24,10 +20,12 @@ import com.asg.finance.entity.GlBankDepositVoucherHdr;
 import com.asg.finance.repository.GlBankDepositVoucherDtlRepository;
 import com.asg.finance.repository.GlBankDepositVoucherHdrRepository;
 import com.asg.finance.service.BankDepositVoucherService;
+import com.asg.finance.service.GlPostingService;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import net.sf.jasperreports.engine.JasperReport;
 import org.springframework.beans.BeanUtils;
 import org.springframework.data.domain.Page;
@@ -49,6 +47,7 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class BankDepositVoucherServiceImpl implements BankDepositVoucherService {
 
     private final GlBankDepositVoucherHdrRepository hdrRepository;
@@ -60,12 +59,18 @@ public class BankDepositVoucherServiceImpl implements BankDepositVoucherService 
     private final LovDataService lovService;
     private final LoggingService loggingService;
     private final PlatformTransactionManager transactionManager;
+    private final ApprovalService approvalService;
+    private final GlPostingService glPostingService;
+    private final GlobalParameterService globalParameterService;
+    
+    private static final String DOC_ID = "300-111";
+    private static final String SCREEN_NAME= "Bank Deposit Voucher";
+    private static final String TRANSACTION_POID = "transactionPoid";
 
     @PersistenceContext
     private EntityManager entityManager;
 
     @Override
-    @PerformGlPosting
     @Transactional
     public BankDepositVoucherResponseDto createBankDepositVoucher(BankDepositVoucherRequestDto request) {
         TransactionTemplate tx = new TransactionTemplate(transactionManager);
@@ -73,21 +78,22 @@ public class BankDepositVoucherServiceImpl implements BankDepositVoucherService 
         Long transactionPoid = tx.execute(status -> createHeaderAndDetails(request));
         callUpdatePaymentProcedure(transactionPoid, request.getType());
 
-        // Log the creation
-        String key = transactionPoid.toString();
+        String key = transactionPoid != null ? transactionPoid.toString() : null;
         loggingService.createLogSummaryEntry(LogDetailsEnum.CREATED, UserContext.getDocumentId(), key);
         
-        return getBankDepositVoucherById(transactionPoid);
+        BankDepositVoucherResponseDto response = getBankDepositVoucherById(transactionPoid);
+        handlePostSaveWorkflow(transactionPoid, response.getDocRef(), response.getTransactionDate());
+        
+        return response;
     }
 
     private Long createHeaderAndDetails(BankDepositVoucherRequestDto request) {
         Long companyPoid = UserContext.getCompanyPoid() != null ? UserContext.getCompanyPoid() : request.getCompanyPoid();
         Long groupPoid = UserContext.getGroupPoid() != null ? UserContext.getGroupPoid() : request.getGroupPoid();
-
         hdrRepository.callBeforeSaveValidation(companyPoid, request.getBankPoid());
 
         GlBankDepositVoucherHdr hdr = GlBankDepositVoucherHdr.builder()
-                .transactionDate(LocalDate.now())
+                .transactionDate(request.getTransactionDate() != null ? request.getTransactionDate() : DateUtil.getCurrentDateInUserTimeZone())
                 .groupPoid(groupPoid)
                 .companyPoid(companyPoid)
                 .bankPoid(request.getBankPoid())
@@ -133,33 +139,48 @@ public class BankDepositVoucherServiceImpl implements BankDepositVoucherService 
     }
 
     @Override
-    @PerformGlPosting
     @Transactional
     public BankDepositVoucherResponseDto updateBankDepositVoucher(Long transactionPoid, BankDepositVoucherRequestDto request) {
         TransactionTemplate tx = new TransactionTemplate(transactionManager);
         tx.setPropagationBehavior(TransactionDefinition.PROPAGATION_REQUIRES_NEW);
         tx.executeWithoutResult(status -> updateHeaderAndDetails(transactionPoid, request));
         callUpdatePaymentProcedure(transactionPoid, request.getType());
-        return getBankDepositVoucherById(transactionPoid);
+        BankDepositVoucherResponseDto response = getBankDepositVoucherById(transactionPoid);
+        handlePostSaveWorkflow(transactionPoid, response.getDocRef(), response.getTransactionDate());
+        
+        return response;
     }
 
     private void updateHeaderAndDetails(Long transactionPoid, BankDepositVoucherRequestDto request) {
-        GlBankDepositVoucherHdr hdr = hdrRepository.findByTransactionPoid(transactionPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Bank Deposit Voucher", "transactionPoid", transactionPoid));
-        Long companyPoid = UserContext.getCompanyPoid() != null ? UserContext.getCompanyPoid() : request.getCompanyPoid();
-
-        // Create a copy of the existing entity for logging
+        GlBankDepositVoucherHdr hdr = getGlBankDepositVoucherHdr(transactionPoid);
         GlBankDepositVoucherHdr oldEntity = new GlBankDepositVoucherHdr();
         BeanUtils.copyProperties(hdr, oldEntity);
 
-        List<GlBankDepositVoucherDtl> existingDetails = dtlRepository.findByTransactionPoid(transactionPoid);
-        for (GlBankDepositVoucherDtl detail : existingDetails) {
-            hdrRepository.callChequeStatusValidation(detail.getRefDocRef(), detail.getRefDocPoid());
+        validateUpdateState(transactionPoid, request);
+        updateHeaderFromRequest(hdr, request);
+        hdrRepository.save(hdr);
+
+        if (request.getDetails() != null) {
+            processTransactionDetails(transactionPoid, request.getDetails());
         }
 
-        hdrRepository.callBeforeSaveValidation(companyPoid, request.getBankPoid());
+        loggingService.logChanges(oldEntity, hdr, GlBankDepositVoucherHdr.class,
+                UserContext.getDocumentId(), transactionPoid.toString(), LogDetailsEnum.MODIFIED, TRANSACTION_POID.toUpperCase());
+    }
 
-        hdr.setTransactionDate(LocalDate.now());
+    private void validateUpdateState(Long transactionPoid, BankDepositVoucherRequestDto request) {
+        GlBankDepositVoucherHdr hdr = getGlBankDepositVoucherHdr(transactionPoid);
+        hdrRepository.callChequeStatusValidation(hdr.getDocRef(), transactionPoid);
+        
+        dtlRepository.findByTransactionPoid(transactionPoid).forEach(detail -> 
+            hdrRepository.callChequeStatusValidation(detail.getRefDocRef(), detail.getRefDocPoid())
+        );
+        hdrRepository.callBeforeSaveValidation(UserContext.getCompanyPoid(), request.getBankPoid());
+    }
+
+
+    private void updateHeaderFromRequest(GlBankDepositVoucherHdr hdr, BankDepositVoucherRequestDto request) {
+        hdr.setTransactionDate(request.getTransactionDate() != null ? request.getTransactionDate() : DateUtil.getCurrentDateInUserTimeZone());
         hdr.setBankPoid(request.getBankPoid());
         hdr.setPostingNarration(request.getPostingNarration());
         hdr.setRemarks(request.getRemarks());
@@ -167,76 +188,100 @@ public class BankDepositVoucherServiceImpl implements BankDepositVoucherService 
         hdr.setRefType(request.getType());
         hdr.setBankFilter(request.getBankFilter());
         hdr.setGroupPosting(request.getGroupPosting() != null && request.getGroupPosting() ? "Y" : "N");
+    }
 
-        hdrRepository.save(hdr);
+    private void processTransactionDetails(Long transactionPoid, List<BankDepositVoucherDtlDto> details) {
+        List<GlBankDepositVoucherDtl> toSave = new ArrayList<>();
+        List<GlBankDepositVoucherDtl> toUpdate = new ArrayList<>();
+        List<Long> toDelete = new ArrayList<>();
+        List<LogRequestDto<GlBankDepositVoucherDtl>> logRequests = new ArrayList<>();
 
-        if (request.getDetails() != null) {
-            List<GlBankDepositVoucherDtl> toSave = new ArrayList<>();
-            List<GlBankDepositVoucherDtl> toUpdate = new ArrayList<>();
-            List<Long> toDelete = new ArrayList<>();
-            List<LogRequestDto<GlBankDepositVoucherDtl>> logRequests = new ArrayList<>();
-
-            List<GlBankDepositVoucherDtl> existingDetailsList = dtlRepository.findByTransactionPoid(transactionPoid);
-            Map<Long, GlBankDepositVoucherDtl> existingDetailsMap = existingDetailsList.stream()
+        List<GlBankDepositVoucherDtl> existingDetailsList = dtlRepository.findByTransactionPoid(transactionPoid);
+        Map<Long, GlBankDepositVoucherDtl> existingMap = existingDetailsList.stream()
                 .collect(Collectors.toMap(GlBankDepositVoucherDtl::getDetRowId, d -> d));
 
-            Long maxDetRowId = existingDetailsList.stream()
-                .map(GlBankDepositVoucherDtl::getDetRowId)
-                .max(Long::compareTo)
-                .orElse(0L);
+        long[] nextIdArr = { existingDetailsList.stream().map(GlBankDepositVoucherDtl::getDetRowId).max(Long::compareTo).orElse(0L) };
 
-            for (BankDepositVoucherDtlDto dto : request.getDetails()) {
-                String action = dto.getActionType() != null ? dto.getActionType().toUpperCase() : "ISCREATED";
-                switch (action) {
-                    case "ISCREATED":
-                        Long detId = dto.getDetRowId() != null ? dto.getDetRowId() : ++maxDetRowId;
-                        GlBankDepositVoucherDtl newDetail = convertToDetailEntity(dto, transactionPoid);
-                        newDetail.setDetRowId(detId);
-                        toSave.add(newDetail);
-                        break;
-                    case "ISUPDATED":
-                        GlBankDepositVoucherDtl existing = existingDetailsMap.get(dto.getDetRowId());
-                        if (existing == null) {
-                            throw new ResourceNotFoundException("Detail", "detRowId", dto.getDetRowId());
-                        }
-                        GlBankDepositVoucherDtl oldDetail = new GlBankDepositVoucherDtl();
-                        BeanUtils.copyProperties(existing, oldDetail);
-                        updateDetailEntity(existing, dto);
-                        toUpdate.add(existing);
-                        String logDetail = String.format("KeyId = TRANSACTION_POID:%s DET_ROW_ID:%s", transactionPoid, dto.getDetRowId());
-                        logRequests.add(new LogRequestDto<>(oldDetail, existing, GlBankDepositVoucherDtl.class, UserContext.getDocumentId(), transactionPoid.toString(), logDetail));
-                        break;
-                    case "ISDELETED":
-                        toDelete.add(dto.getDetRowId());
-                        loggingService.logDelete(dto, UserContext.getDocumentId(), transactionPoid.toString());
-                        break;
-                }
-            }
-
-            if (!toSave.isEmpty()) {
-                List<GlBankDepositVoucherDtl> saved = dtlRepository.saveAll(toSave);
-                saved.forEach(detail -> {
-                    String logDetail = String.format("Row Created on Bank Deposit Voucher Detail with detRowId: %s", detail.getDetRowId());
-                    loggingService.createLogSummaryEntry(UserContext.getDocumentId(), transactionPoid.toString(), logDetail);
-                });
-            }
-            if (!toUpdate.isEmpty()) {
-                dtlRepository.saveAll(toUpdate);
-                if (!logRequests.isEmpty()) {
-                    loggingService.createLogBatch(logRequests);
-                }
-            }
-            if (!toDelete.isEmpty()) {
-                existingDetailsList.stream()
-                    .filter(d -> toDelete.contains(d.getDetRowId()))
-                    .forEach(dtlRepository::delete);
-            }
+        for (BankDepositVoucherDtlDto dto : details) {
+            applyDetailChange(dto, transactionPoid, nextIdArr, existingMap, toSave, toUpdate, toDelete, logRequests);
         }
 
-        // Log the update
-        String key = transactionPoid.toString();
-        loggingService.logChanges(oldEntity, hdr, GlBankDepositVoucherHdr.class,
-                UserContext.getDocumentId(), key, LogDetailsEnum.MODIFIED, "TRANSACTION_POID");
+        saveNewDetails(transactionPoid, toSave);
+        updateDetails(toUpdate, logRequests);
+        deleteDetails(toDelete, existingDetailsList);
+    }
+
+    private void applyDetailChange(BankDepositVoucherDtlDto dto, Long transactionPoid, long[] nextIdArr,
+                                  Map<Long, GlBankDepositVoucherDtl> existingMap, List<GlBankDepositVoucherDtl> toSave,
+                                  List<GlBankDepositVoucherDtl> toUpdate, List<Long> toDelete,
+                                  List<LogRequestDto<GlBankDepositVoucherDtl>> logRequests) {
+        String action = dto.getActionType() != null ? dto.getActionType().toUpperCase() : "ISCREATED";
+        switch (action) {
+            case "ISCREATED":
+                Long detId = dto.getDetRowId() != null ? dto.getDetRowId() : ++nextIdArr[0];
+                GlBankDepositVoucherDtl newDetail = convertToDetailEntity(dto, transactionPoid);
+                newDetail.setDetRowId(detId);
+                toSave.add(newDetail);
+                break;
+            case "ISUPDATED":
+                handleUpdateBatchAction(dto, transactionPoid, existingMap, toUpdate, logRequests);
+                break;
+            case "ISDELETED":
+                toDelete.add(dto.getDetRowId());
+                loggingService.logDelete(dto, UserContext.getDocumentId(), transactionPoid.toString());
+                break;
+            default:
+                break;
+        }
+    }
+
+    private void handleUpdateBatchAction(BankDepositVoucherDtlDto dto, Long transactionPoid,
+                                   Map<Long, GlBankDepositVoucherDtl> existingMap,
+                                   List<GlBankDepositVoucherDtl> toUpdate,
+                                   List<LogRequestDto<GlBankDepositVoucherDtl>> logRequests) {
+        GlBankDepositVoucherDtl existing = existingMap.get(dto.getDetRowId());
+        if (existing == null) {
+            throw new ResourceNotFoundException("Detail", "detRowId", dto.getDetRowId());
+        }
+        GlBankDepositVoucherDtl oldDetail = new GlBankDepositVoucherDtl();
+        BeanUtils.copyProperties(existing, oldDetail);
+        updateDetailEntity(existing, dto);
+        toUpdate.add(existing);
+        String logDetail = String.format("KeyId = TRANSACTION_POID:%s DET_ROW_ID:%s", transactionPoid, dto.getDetRowId());
+        logRequests.add(new LogRequestDto<>(oldDetail, existing, GlBankDepositVoucherDtl.class, UserContext.getDocumentId(), transactionPoid.toString(), logDetail));
+    }
+
+    private void saveNewDetails(Long transactionPoid, List<GlBankDepositVoucherDtl> toSave) {
+        if (!toSave.isEmpty()) {
+            List<GlBankDepositVoucherDtl> saved = dtlRepository.saveAll(toSave);
+            saved.forEach(detail -> {
+                String logDetail = String.format("Row Created on Bank Deposit Voucher Detail with detRowId: %s", detail.getDetRowId());
+                loggingService.createLogSummaryEntry(UserContext.getDocumentId(), transactionPoid.toString(), logDetail);
+            });
+        }
+    }
+
+    private void updateDetails(List<GlBankDepositVoucherDtl> toUpdate, List<LogRequestDto<GlBankDepositVoucherDtl>> logRequests) {
+        if (!toUpdate.isEmpty()) {
+            dtlRepository.saveAll(toUpdate);
+            if (!logRequests.isEmpty()) {
+                loggingService.createLogBatch(logRequests);
+            }
+        }
+    }
+
+    private void deleteDetails(List<Long> toDelete, List<GlBankDepositVoucherDtl> existingDetailsList) {
+        if (!toDelete.isEmpty()) {
+            existingDetailsList.stream()
+                    .filter(d -> toDelete.contains(d.getDetRowId()))
+                    .forEach(dtlRepository::delete);
+        }
+    }
+
+
+    private  GlBankDepositVoucherHdr getGlBankDepositVoucherHdr(Long transactionPoid) {
+        return hdrRepository.findByTransactionPoid(transactionPoid)
+                .orElseThrow(() -> new ResourceNotFoundException(SCREEN_NAME, TRANSACTION_POID, transactionPoid));
     }
 
     private String normalizePaymentType(String paymentType) {
@@ -245,8 +290,7 @@ public class BankDepositVoucherServiceImpl implements BankDepositVoucherService 
 
     @Override
     public BankDepositVoucherResponseDto getBankDepositVoucherById(Long transactionPoid) {
-        GlBankDepositVoucherHdr hdr = hdrRepository.findByTransactionPoid(transactionPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Bank Deposit Voucher", "transactionPoid", transactionPoid));
+        GlBankDepositVoucherHdr hdr = getGlBankDepositVoucherHdr(transactionPoid);
 
         List<GlBankDepositVoucherDtl> details = dtlRepository.findByTransactionPoidOrderByChqSeqNumAsc(transactionPoid);
 
@@ -265,7 +309,7 @@ public class BankDepositVoucherServiceImpl implements BankDepositVoucherService 
                 .lastModifiedDate(hdr.getLastModifiedDate())
                 .refType(hdr.getRefType())
                 .bankFilter(hdr.getBankFilter())
-                .details(details.stream().map(this::convertToDetailDto).collect(Collectors.toList()))
+                .details(details.stream().map(this::convertToDetailDto).toList())
                 .build();
     }
 
@@ -273,7 +317,7 @@ public class BankDepositVoucherServiceImpl implements BankDepositVoucherService 
     @Transactional
     public void softDeleteBankDepositVoucher(Long transactionPoid, DeleteReasonDto deleteReasonDto) {
         GlBankDepositVoucherHdr hdr = hdrRepository.findByTransactionPoid(transactionPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Bank Deposit Voucher", "transactionPoid", transactionPoid));
+                .orElseThrow(() -> new ResourceNotFoundException(SCREEN_NAME, TRANSACTION_POID, transactionPoid));
 
         documentDeleteService.deleteDocument(
                 transactionPoid,
@@ -377,10 +421,6 @@ public class BankDepositVoucherServiceImpl implements BankDepositVoucherService 
         return  null;
     }
 
-    private String getCurrentUser() {
-        return UserContext.getUserId() != null ? String.valueOf(UserContext.getUserId()) : "SYSTEM";
-    }
-
     @Override
     public byte[] print(Long transactionPoid) throws Exception {
         Map<String, Object> params = printService.buildBaseParams(transactionPoid, "400-109");
@@ -388,5 +428,33 @@ public class BankDepositVoucherServiceImpl implements BankDepositVoucherService 
         params.put("SUB_CASH", printService.load("Finance/GL/BankDepositVoucherGL_subreport1.jrxml"));
         JasperReport mainReport = printService.load("Finance/GL/BankDepositVoucherReport.jrxml");
         return printService.fillReportToPdf(mainReport, params, dataSource);
+    }
+
+    private void handlePostSaveWorkflow(Long transactionPoid, String docRef, LocalDate transactionDate) {
+        try {
+            Long groupPoid = UserContext.getGroupPoid();
+            String approvalSubmission = globalParameterService.getParameterValue(
+                    "BANK_DEPOSIT_APPROVAL_SUBMISSION", "GROUP", groupPoid != null ? groupPoid.toString() : "1", "FALSE");
+
+            if ("TRUE".equalsIgnoreCase(approvalSubmission)) {
+                String docId = UserContext.getDocumentId() != null ? UserContext.getDocumentId() : DOC_ID;
+                String approvalStatus = approvalService.getApprovalStatus(docId, transactionPoid);
+                log.info("Approval check for BDV {}: status={}, parameter={}", docRef, approvalStatus, approvalSubmission);
+
+                if ("APPROVAL_NOT_APPLICABLE".equalsIgnoreCase(approvalStatus)) {
+                    glPostingService.performGlPosting(docId, transactionPoid, docRef);
+                } else if (approvalStatus == null || approvalStatus.isEmpty() || 
+                           "NOT_SUBMITTED".equalsIgnoreCase(approvalStatus) ||
+                           "RETURN_FOR_CORRECTION".equalsIgnoreCase(approvalStatus)) {
+                    hdrRepository.callApprovalProcedure(UserContext.getCompanyPoid(), UserContext.getUserPoid(), 
+                            transactionPoid, docRef, transactionDate);
+                }
+            } else {
+                String docId = UserContext.getDocumentId() != null ? UserContext.getDocumentId() : DOC_ID;
+                glPostingService.performGlPosting(docId, transactionPoid, docRef);
+            }
+        } catch (Exception e) {
+            log.error("Post-save workflow failed for BDV {}, but data is saved", docRef, e);
+        }
     }
 }
